--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -256,18 +256,18 @@ header {
 				background-image:none;
 				padding-top: 45%;
 				.slider-left,.slider-right{
-					background: url(../img/slider.png) no-repeat;
+					background: url(../img/chevrons-circle.png) no-repeat;
 					display: block;
-					width: 89px;
-					height: 67px;
+					width: 50px;
+					height: 50px;
 					@include transition;
 				}
-				//png : 640 x 480
+				//png : 100 X 50
 				.slider-left{
 					background-position: 0 0;	
 				}
 				.slider-right{
-					background-position: -200px 0;	
+					background-position: -50px 0;	
 				}
 			}
 		}
